# advice-bot

./: .gitignore  .style.yapf  LICENSE  README.md  check_types.sh  format.sh  hello.py  pyproject.toml  run.sh  run_dev.sh  run_prod.sh
production/: advice_bot.service  decrypt.sh  encrypt.sh  params.json.encrypted  params.textproto.encrypted
src/: advice_bot.py  main.py  params.py
src/advice_bot/: advice_bot.py  params.py
src/advice_bot/commands/: admin.py  common.py  diceroll.py  monthly_giveaway.py  monthly_lottery.py
src/advice_bot/database/: prizes.sql  storage.py
src/advice_bot/database/schema/: reset_dev.sql  schema.sql
src/advice_bot/proto/: Makefile  __init__.py  params.proto
src/advice_bot/util/: discord_util.py  drop_table.py  drop_table_test.py
src/commands/: common.py  monthly_lottery.py  monthly_lotto.py  registry.py
src/database/: storage.py
src/database/schema/: reset_dev.sql  reset_test.sql  schema.sql
src/frontend/: server.py
src/production/: decrypt.sh  encrypt.sh  params.json  params.json.encrypted
src/util/: discord_util.py  encryption.py
